# awesome-voice-apps

./: .coderabbit.yaml  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  INDEX.md  Makefile  README.md  catalog.json  catalog.schema.json  codecov.yml  ruff.toml
.claude/: mcp.json
.claude/agents/: demo-builder.md
.claude/commands/: build.md
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: daily-demo.md
.github/workflows/: catalog.yml  claude-code.yml  daily-prompt.yml  lint.yml  notify-playground.yml  test.yml
demos/claim-intake/: .env.example  README.md  agent.py  blog.md  playground.json  pyproject.toml  tutorial.md
demos/clinic-scheduler/: README.md  agent.py  blog.md  playground.json  pyproject.toml  tutorial.md
demos/drive-thru-coffee/: README.md  agent.py  blog.md  playground.json  pyproject.toml  tutorial.md
demos/front-desk-interpreter/: .env.example  README.md  agent.py  blog.md  playground.json  pyproject.toml  tutorial.md
demos/order-returns/: README.md  agent.py  playground.json  pyproject.toml
demos/panel-scribe/: .env.example  README.md  agent.py  blog.md  playground.json  pyproject.toml  tutorial.md
demos/quick-trivia/: .env.example  README.md  agent.py  blog.md  playground.json  pyproject.toml  tutorial.md
demos/roadside-dispatch/: .env.example  README.md  agent.py  blog.md  health.py  playground.json  pyproject.toml  test_health.py  tutorial.md
demos/tenant-rights/: .env.example  README.md  agent.py  blog.md  build_index.py  playground.json  pyproject.toml  rag.py  test_rag.py  tutorial.md
demos/tenant-rights/data/: hud-resident-rights.md
demos/water-tracker/: README.md  agent.py  blog.md  playground.json  pyproject.toml  tutorial.md
docs/: playground-components.md
scripts/: build_catalog.py  build_readme_assets.py  test_build_catalog.py  test_build_readme_assets.py
templates/livekit-base/: README.md  agent.py  blog.md  pyproject.toml  requirements.txt
tests/: conftest.py
tests/claim-intake/: test_claim_intake.py  test_validators.py
tests/clinic-scheduler/: test_clinic.py
tests/drive-thru-coffee/: test_drive_thru.py
tests/panel-scribe/: test_panel_scribe.py  test_sidecar.py
tests/quick-trivia/: conftest.py  test_quick_trivia.py
tests/roadside-dispatch/: test_roadside.py
tests/tenant-rights/: test_tenant.py
tests/water-tracker/: test_water_tracker.py
