[project]
name = "clinic-scheduler"
version = "0.1.0"
description = "Book a doctor appointment by voice: find an open slot, confirm it, and reschedule if plans change."
requires-python = ">=3.11"
dependencies = [
    "livekit-agents[openai,silero,turn-detector]>=1.5,<2.0",
    "python-dotenv>=1.0",
]
